# arithmetic-formatter

./: .gitignore  README.md  arithmetic_arranger.py  main.py  pyproject.toml
arithmetic_formatter/: arithmetic_arranger.py  core.py  main.py  test_module.py
budget_app/: core.py  main.py  test_module.py
polygon_area_calculator/: core.py  main.py  test_module.py
probability_calculator/: core.py  main.py  test_module.py
time_calculator/: core.py  main.py  test_module.py
