[tool.poetry]
name = "freeCodeCamp final projects"
version = "0.1.0"
description = "Scientific Computing with Python course projects by zluuba"
authors = ["Luybov Nikitina <zluyba.nikitina@gmail.com>"]
readme = "README.md"
packages = [{include = "arithmetic_formatter"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
